# restart-rejected

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run_tests.py
data/: hosts.yaml  rules.yaml
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_evpn_manager.py  test_evpn_status_checker.py  test_integration.py
tests/fixtures/: evpn_mock_data.py  hosts.yaml  rules.yaml  test_hosts.yaml
